[gd_scene load_steps=10 format=3 uid="uid://cptmdfs0olo5j"]

[ext_resource type="Script" path="res://scripts/doctor.gd" id="1_c1olb"]
[ext_resource type="Texture2D" uid="uid://6unldm4s7w4x" path="res://sprites/Character_Doctor-Sheet.png" id="2_7gwsj"]
[ext_resource type="PackedScene" uid="uid://dqkgy0al7xgib" path="res://scenes/components/patrol.tscn" id="3_56rd5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_atn03"]
size = Vector2(16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_r3vci"]
radius = 128.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3q0mb"]
size = Vector2(64, 64)

[sub_resource type="Animation" id="Animation_58gst"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_eb2uo"]
resource_name = "walking_animation"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 3, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rnq5r"]
_data = {
"RESET": SubResource("Animation_58gst"),
"walking_animation": SubResource("Animation_eb2uo")
}

[node name="doctor" type="CharacterBody2D" node_paths=PackedStringArray("patrol_component")]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_c1olb")
detection_radius = 150
patrol_component = NodePath("patrol")

[node name="doctor_sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_7gwsj")
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_atn03")

[node name="Visibility" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visibility"]
shape = SubResource("CircleShape2D_r3vci")

[node name="doctor_arrest_area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="doctor_arrest_area"]
shape = SubResource("RectangleShape2D_3q0mb")

[node name="patrol" parent="." instance=ExtResource("3_56rd5")]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="StunTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../doctor_sprite")
libraries = {
"": SubResource("AnimationLibrary_rnq5r")
}

[connection signal="body_entered" from="Visibility" to="." method="_on_visibility_body_entered"]
[connection signal="body_exited" from="Visibility" to="." method="_on_visibility_body_exited"]
[connection signal="body_entered" from="doctor_arrest_area" to="." method="_on_doctor_arrest_area_body_entered"]
[connection signal="body_exited" from="doctor_arrest_area" to="." method="_on_doctor_arrest_area_body_exited"]
[connection signal="reached_patrol_point" from="patrol" to="." method="_on_patrol_reached_patrol_point"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]
